# write-optimized-skip-list

./: Cargo.toml  write-optimized-notes.md
src/: dense_range_map.rs  index_multimap.rs  lib.rs  mapped.rs  merge_dedup.rs  naive.rs  range_mapped.rs  simple_dense_range_map.rs  three_phase.rs  two_phase.rs  two_phase2.rs  two_phase3.rs
src/mapped/: node_map.rs
src/snapshots/: skip_lists__range_mapped__test__add_neg_inf_to_l1_root.snap  skip_lists__range_mapped__test__all_levels_start_with_neginf.snap  skip_lists__range_mapped__test__child_flushes_stay_in_range.snap  skip_lists__range_mapped__test__cloned_nodes_dedup_buffer.snap  skip_lists__range_mapped__test__flush_to_gap.snap  skip_lists__range_mapped__test__flush_to_leaves.snap  skip_lists__range_mapped__test__flush_to_upper.snap  skip_lists__range_mapped__test__fuzz7.snap  skip_lists__range_mapped__test__fuzz_repro1.snap  skip_lists__range_mapped__test__fuzz_repro2.snap  skip_lists__range_mapped__test__fuzz_repro3.snap  skip_lists__range_mapped__test__index_subentries_in_leaf_search.snap  skip_lists__range_mapped__test__insert_at_leaves.snap  skip_lists__range_mapped__test__leaf_with_neg_inf.snap  skip_lists__range_mapped__test__new_neginfs_propogate.snap  skip_lists__range_mapped__test__obey_logical_leaves_when_balancing.snap  skip_lists__range_mapped__test__old_roots_get_deduped.snap  skip_lists__range_mapped__test__old_roots_get_sorted.snap  skip_lists__range_mapped__test__only_add_neginf_to_first_logical_node.snap  skip_lists__range_mapped__test__use_precise_leads.snap
