[package]
name = "skip-lists"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.3"
itertools = "0.10.5"
rand = "0.8.5"
twox-hash = "1.6.3"

[dev-dependencies]
insta = "1.29.0"
rand_distr = "0.4.3"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

